--- a/src/edu/AllForKids/gui/ListeProduits.fxml
+++ b/src/edu/AllForKids/gui/ListeProduits.fxml
@@ -3,8 +3,7 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="482.0" prefWidth="583.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="edu.AllForKids.gui.ListeProduitsController">
+<AnchorPane id="AnchorPane" prefHeight="482.0" prefWidth="583.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.AllForKids.gui.ListeProduitsController">
    <children>
       <ListView fx:id="listprod" layoutX="30.0" layoutY="13.0" prefHeight="418.0" prefWidth="432.0" />
    </children>
