--- a/src/edu/AllForKids/gui/Panier.fxml
+++ b/src/edu/AllForKids/gui/Panier.fxml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.AllForKids.gui.PanierController">
    <children>
-      <Label fx:id="nomprod" layoutX="145.0" layoutY="89.0" prefHeight="23.0" prefWidth="139.0" text="Label" />
-      <Label fx:id="prix" layoutX="145.0" layoutY="158.0" prefHeight="17.0" prefWidth="77.0" text="Label" />
-      <Button fx:id="bttAjout" layoutX="158.0" layoutY="234.0" mnemonicParsing="false" onAction="#paniiiier" text="Ajout au panier" />
-      <Button layoutX="359.0" layoutY="247.0" mnemonicParsing="false" text="aff" />
+      <TableView fx:id="table" layoutX="66.0" layoutY="53.0" prefHeight="220.0" prefWidth="316.0">
+        <columns>
+          <TableColumn fx:id="nomprod" prefWidth="98.0" text="Nom Produit" />
+          <TableColumn fx:id="prix" prefWidth="62.0" text="Prix" />
+            <TableColumn fx:id="type" prefWidth="72.0" text="Type" />
+            <TableColumn fx:id="quantite" editable="true" prefWidth="83.0" text="Quantite" />
+        </columns>
+      </TableView>
+      <Button fx:id="commander" layoutX="287.0" layoutY="296.0" mnemonicParsing="false" onAction="#commander" text="Commander" />
    </children>
 </AnchorPane>
