--- a/src/edu/AllForKids/gui/ListeProduits2.fxml
+++ b/src/edu/AllForKids/gui/ListeProduits2.fxml
@@ -19,19 +19,19 @@
         </columns>
       </TableView>
       <ImageView fx:id="image" fitHeight="243.0" fitWidth="201.0" layoutX="513.0" layoutY="137.0" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="301.0" layoutY="397.0" mnemonicParsing="false" onAction="#AjoutPanier" prefHeight="38.0" prefWidth="147.0" text="AjouterAuPanier" />
+      <Button fx:id="ajoutaupan" layoutX="301.0" layoutY="397.0" mnemonicParsing="false" onAction="#AjoutPanier" prefHeight="38.0" prefWidth="147.0" text="AjouterAuPanier" />
       <Button fx:id="pann" layoutX="140.0" layoutY="397.0" mnemonicParsing="false" onAction="#consulter" prefHeight="38.0" prefWidth="147.0" text="Consulter panier" />
       <Button fx:id="caddie" cacheShape="false" layoutX="544.0" layoutY="38.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="10.0" />
       <Circle fx:id="nbPanier" fill="#cdcdcd" layoutX="524.0" layoutY="38.0" radius="11.0" stroke="#f8f7f7" strokeType="INSIDE" />
       <Label fx:id="nbpanier" layoutX="521.0" layoutY="30.0" prefHeight="14.0" prefWidth="22.0" text="0" />
-  <ImageView fitHeight="57.0" fitWidth="93.0" layoutX="524.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
+  <ImageView fx:id="cadd" fitHeight="57.0" fitWidth="93.0" layoutX="524.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
     <image>
       <Image url="file:///C:/Users/Narjes/Pictures/panier.png" />
     </image>
   </ImageView>
       <ImageView fx:id="sac" fitHeight="25.0" fitWidth="28.0" layoutX="309.0" layoutY="404.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../../Pictures/1492532808-5-shopping-bag_83223.png" />
+            <Image url="file:/C:/Users/Narjes/Pictures/1492532808-5-shopping-bag_83223.png" />
          </image>
       </ImageView>
       
