login/register final controle saisie design

--- a/src/edu/AllForKids/gui/AccueilFrontEnd.fxml
+++ b/src/edu/AllForKids/gui/AccueilFrontEnd.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="662.0" prefWidth="1035.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.AllForKids.gui.AccueilFrontEndController">
-   <top>
+  <top>
       <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #2471A3;" BorderPane.alignment="CENTER">
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="368.0" spacing="7.0" style="-fx-background-color: #52B3D9;" HBox.hgrow="NEVER">
@@ -49,11 +49,7 @@
                         <Label onMouseClicked="#Lougout" text="Deconnexion" textFill="WHITE" underline="true" />
                      </children>
                   </VBox>
-                  <ImageView fx:id="UserImage" fitHeight="61.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../View/images/Avatar.png" />
-                     </image>
-                  </ImageView>
+                  <ImageView fx:id="UserImage" fitHeight="61.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true" />
                   <Pane prefHeight="100.0" prefWidth="9.0" />
                </children>
             </HBox>
@@ -69,7 +65,7 @@
             <Pane prefHeight="6.0" prefWidth="225.0" />
             <VBox prefHeight="460.0" prefWidth="225.0" spacing="6.0">
                <children>
-                  <Button fx:id="BtnActualite" mnemonicParsing="false" onAction="#GetAcceuil" prefHeight="80.0" prefWidth="250.0" style="-fx-background-color: #FFFF;" text="Acceuil" textFill="#2471a3">
+                  <Button fx:id="BtnAcceuil" mnemonicParsing="false" onAction="#GetAcceuil" prefHeight="80.0" prefWidth="250.0" style="-fx-background-color: #FFFF;" text="Acceuil" textFill="#2471a3">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -105,9 +101,9 @@
       </VBox>
    </left>
    <center>
-      <ScrollPane fx:id="AncoMain" fitToHeight="true" fitToWidth="true" pannable="true" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <ScrollPane fx:id="SrollPaneMain" fitToHeight="true" fitToWidth="true" pannable="true" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <content>
-          <AnchorPane fx:id="secPane" minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FFFFFF;" />
+          <AnchorPane fx:id="ScrollPaneMain" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
         </content>
       </ScrollPane>
    </center>
