--- a/src/edu/AllForKids/gui/Register.fxml
+++ b/src/edu/AllForKids/gui/Register.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -61,12 +62,12 @@
                <children>
                   <ImageView fitHeight="400.0" fitWidth="300.0" layoutX="25.0" layoutY="143.0" opacity="0.21" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../images/balloons.png" />
+                        <Image url="@../images/balloons.png" />
                      </image>
                   </ImageView>
                   <ImageView fitHeight="116.0" fitWidth="166.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../images/logo.png" />
+                        <Image url="@../images/logo.png" />
                      </image>
                   </ImageView>
                   <Button fx:id="btnsignup" layoutX="80.0" layoutY="447.0" mnemonicParsing="false" onAction="#Register" style="-fx-background-color: #0288D1; -fx-text-fill: #ffffff; -fx-background-radius: 0px;" text="S'inscrire" />
@@ -75,7 +76,7 @@
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="Nom" layoutX="42.0" layoutY="143.0" maxHeight="300.0" maxWidth="300.0" promptText="Nom" style="-fx-background-color: transparent; -fx-border-width: 0 0 2px 0; -fx-border-color: white; -fx-text-fill: white;">
+                  <TextField fx:id="Nom" layoutX="42.0" layoutY="142.0" maxHeight="300.0" maxWidth="300.0" promptText="Nom" style="-fx-background-color: transparent; -fx-border-width: 0 0 2px 0; -fx-border-color: white; -fx-text-fill: white;">
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
@@ -90,12 +91,28 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
                   </PasswordField>
-                  <RadioButton fx:id="homme" layoutX="65.0" layoutY="385.0" mnemonicParsing="false" text="Homme" textFill="#336e7b" />
-                  <RadioButton fx:id="femme" layoutX="168.0" layoutY="385.0" mnemonicParsing="false" text="Femme" textFill="#336e7b" />
                   <ImageView fx:id="img" fitHeight="96.0" fitWidth="155.0" layoutX="180.0" layoutY="69.0" pickOnBounds="true" />
+                  <PasswordField fx:id="RepeterPass" layoutX="43.0" layoutY="285.0" maxHeight="300.0" maxWidth="300.0" promptText="Répeter Mot de passe" style="-fx-background-color: transparent; -fx-border-width: 0 0 2px 0; -fx-border-color: white; -fx-text-fill: black;">
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </PasswordField>
+                  <HBox alignment="CENTER" layoutX="23.0" layoutY="393.0" prefHeight="0.0" prefWidth="314.0" spacing="30.0">
+                     <children>
+                        <RadioButton fx:id="homme" mnemonicParsing="false" style="-fx-text-fill: white;" text="Homme">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="gender" />
+                           </toggleGroup>
+                        </RadioButton>
+                        <RadioButton fx:id="femme" mnemonicParsing="false" style="-fx-text-fill: white;" text="Femme" toggleGroup="$gender" />
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" top="10.0" />
+                     </padding>
+                  </HBox>
                   <Button fx:id="Reset" layoutX="180.0" layoutY="447.0" mnemonicParsing="false" onAction="#Reset" style="-fx-background-color: #0288D1; -fx-text-fill: #ffffff; -fx-background-radius: 0px;" text="Reset" />
-                  <Button fx:id="Choose" layoutX="249.0" layoutY="149.0" mnemonicParsing="false" onAction="#Choisir" style="-fx-background-color: #0288D1; -fx-text-fill: #ffffff; -fx-background-radius: 0px;" text="Choisir Image" />
-                  <ComboBox fx:id="role" layoutX="45.0" layoutY="302.0" prefWidth="150.0" />
+                  <Button fx:id="Choose" layoutX="225.0" layoutY="182.0" mnemonicParsing="false" onAction="#Choisir" style="-fx-background-color: #0288D1; -fx-text-fill: #ffffff; -fx-background-radius: 0px;" text="Choisir Image" />
+                  <ComboBox fx:id="Role" layoutX="45.0" layoutY="348.0" prefWidth="150.0" promptText="Role" />
                </children>
             </AnchorPane>
          </children>
