BackEND Panier supprimer quantite

--- a/src/edu/AllForKids/gui/AccueilBackEnd.fxml
+++ b/src/edu/AllForKids/gui/AccueilBackEnd.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
@@ -23,11 +23,19 @@
                <children>
                   <VBox alignment="CENTER_LEFT" fillWidth="false" prefHeight="90.0" prefWidth="177.0" style="-fx-background-color: #81CFE0;">
                      <children>
-                        <ImageView fitHeight="51.0" fitWidth="162.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="51.0" fitWidth="162.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true" translateX="4.0" translateY="-6.0">
                            <image>
                               <Image url="@../../../images/logo.png" />
                            </image>
+                           <rotationAxis>
+                              <Point3D x="1.0" y="1.0" z="1.0" />
+                           </rotationAxis>
                         </ImageView>
+                        <Label fx:id="NomGestionnaire" prefHeight="20.0" prefWidth="142.0" text="Gestionnaire " textFill="WHITE" translateX="10.0" translateY="4.0">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
                      </children>
                   </VBox>
                   <Separator orientation="VERTICAL" prefHeight="200.0" styleClass="back" />
@@ -49,49 +57,46 @@
                         <Separator prefWidth="200.0" VBox.vgrow="ALWAYS" />
                         <HBox prefHeight="25.0" prefWidth="420.0" spacing="6.0" VBox.vgrow="NEVER">
                            <children>
-                              <Button onAction="#GetGestionUser" prefHeight="150.0" prefWidth="170.0" style="-fx-background-color: #FAFAFA;" text="Utilisateur">
+                              <Button onAction="#GetGestionUser" prefHeight="150.0" prefWidth="140.0" style="-fx-background-color: #FAFAFA;" text="Utilisateur" translateX="3.0">
                                  <font>
                                     <Font size="10.0" />
                                  </font></Button>
-                              <Button onAction="#GetGestionStore" prefHeight="150.0" prefWidth="170.0" style="-fx-background-color: #FAFAFA;" text="Store">
+                              <Button onAction="#GetGestionStore" prefHeight="150.0" prefWidth="140.0" style="-fx-background-color: #FAFAFA;" text="Store" translateX="1.0">
                                  <font>
                                     <Font size="10.0" />
                                  </font></Button>
-                              <Button onAction="#GetGestionEvenement" prefHeight="150.0" prefWidth="170.0" style="-fx-background-color: #FAFAFA;" text="Evenement">
+                              <Button onAction="#GetGestionEvenement" prefHeight="150.0" prefWidth="140.0" style="-fx-background-color: #FAFAFA;" text="Evenement">
                                  <font>
                                     <Font size="10.0" />
                                  </font></Button>
-                              <Button onAction="#GetGestionEspace" prefHeight="150.0" prefWidth="170.0" style="-fx-background-color: #FAFAFA;" text="Espace Enfants">
+                              <Button onAction="#GetGestionEspace" prefHeight="150.0" prefWidth="140.0" style="-fx-background-color: #FAFAFA;" text="Espace Enfants">
                                  <font>
                                     <Font size="10.0" />
                                  </font></Button>
-                              <Button onAction="#GetGestionBabySitter" prefHeight="150.0" prefWidth="170.0" style="-fx-background-color: #FAFAFA;" text="Baby sitter">
+                              <Button onAction="#GetGestionBabySitter" prefHeight="150.0" prefWidth="135.0" style="-fx-background-color: #FAFAFA;" text="Baby sitter" translateX="-1.0">
                                  <font>
                                     <Font size="10.0" />
                                  </font></Button>
-                              <Button onAction="#GetGestionPediatre" prefHeight="25.0" prefWidth="170.0" style="-fx-background-color: #FAFAFA;" text="Pédiatre">
+                              <Button onAction="#GetGestionPediatre" prefHeight="25.0" prefWidth="140.0" style="-fx-background-color: #FAFAFA;" text="Pédiatre" translateX="-3.0">
                                  <font>
                                     <Font size="10.0" />
                                  </font></Button>
                            </children>
                         </HBox>
                      </children>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
+                    
                   </VBox>
                   <Separator orientation="VERTICAL" prefHeight="200.0" />
                   <HBox alignment="CENTER" prefHeight="90.0" prefWidth="228.0" spacing="6.0" style="-fx-background-color: #81CFE0;">
                      <children>
                         <VBox alignment="CENTER_RIGHT" fillWidth="false" prefHeight="90.0" prefWidth="126.0" spacing="5.0" style="-fx-background-color: #81CFE0;">
                            <children>
-                              <Label fx:id="LblUserName" prefHeight="21.0" prefWidth="127.0" text="User name" textAlignment="RIGHT" textFill="WHITE">
+                              <Label fx:id="LblUserName" prefHeight="21.0" prefWidth="127.0" text="Administrateur" textAlignment="RIGHT" textFill="WHITE">
                                  <font>
                                     <Font size="15.0" />
                                  </font>
                               </Label>
                               <Separator prefHeight="0.0" prefWidth="118.0" />
-                              <Label onMouseClicked="#EditProfile" text="Modifier mon profil" textFill="WHITE" underline="true" />
                               <Label onMouseClicked="#disconnect" text="Deconnexion" textFill="WHITE" underline="true">
                                  <font>
                                     <Font size="10.0" />
@@ -99,9 +104,9 @@
                               </Label>
                            </children>
                         </VBox>
-                        <ImageView fx:id="UserPicture" fitHeight="46.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="UserPicture" fitHeight="74.0" fitWidth="59.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@images/Avatar.png" />
+                              <Image url="file:/C:/Users/Narjes/Pictures/index.jpg" />
                            </image>
                         </ImageView>
                      </children>
