--- a/src/edu/AllForKids/gui/Panier.fxml
+++ b/src/edu/AllForKids/gui/Panier.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="370.0" prefWidth="507.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.AllForKids.gui.PanierController">
+<AnchorPane id="AnchorPane" prefHeight="370.0" prefWidth="518.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.AllForKids.gui.PanierController">
    <children>
       <TableView fx:id="table" layoutX="21.0" layoutY="21.0" prefHeight="213.0" prefWidth="349.0">
         <columns>
@@ -15,8 +15,9 @@
             <TableColumn fx:id="type" prefWidth="122.0" text="Type" />
         </columns>
       </TableView>
-      <Button fx:id="commander" layoutX="396.0" layoutY="21.0" mnemonicParsing="false" onAction="#commander" style="-fx-background-color: #22A7F0;" text="Commander" textFill="#f5f4f4" />
+      <Button fx:id="commander" layoutX="259.0" layoutY="246.0" mnemonicParsing="false" onAction="#commander" prefHeight="25.0" prefWidth="107.0" style="-fx-background-color: #22A7F0;" text="Commander" textFill="#f5f4f4" />
       <Label layoutX="21.0" layoutY="271.0" prefHeight="37.0" prefWidth="154.0" text="Prix Total Des Achats" />
       <Label fx:id="totalPrix" layoutX="150.0" layoutY="271.0" prefHeight="37.0" prefWidth="140.0" text="Label" />
+      <Button fx:id="btn" layoutX="376.0" layoutY="21.0" mnemonicParsing="false" onAction="#suprrimerDuPanier" prefHeight="25.0" prefWidth="140.0" style="-fx-background-color: #22A7F0;" text="Supprimer Du Panier" textFill="#eeeaea" />
    </children>
 </AnchorPane>
