--- a/src/edu/AllForKids/gui/Quantite.fxml
+++ b/src/edu/AllForKids/gui/Quantite.fxml
@@ -5,8 +5,9 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="113.0" prefWidth="210.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.AllForKids.gui.QuantiteController">
+<AnchorPane id="AnchorPane" fx:id="monFrame" prefHeight="113.0" prefWidth="210.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.AllForKids.gui.QuantiteController">
    <children>
+       
       <Label layoutX="14.0" layoutY="32.0" text="Nombre Artcile" />
       <TextField fx:id="nbrArticle" layoutX="111.0" layoutY="28.0" prefHeight="25.0" prefWidth="52.0" />
       <Button fx:id="AjouterArtcile" layoutX="68.0" layoutY="75.0" mnemonicParsing="false" onAction="#AjoutArticle" style="-fx-background-color: #22A7F0;" text="Enregistrer" textFill="#f8f7f7" />
