--- a/src/edu/AllForKids/gui/Register.fxml
+++ b/src/edu/AllForKids/gui/Register.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="edu.AllForKids.gui.RegisterController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.AllForKids.gui.RegisterController">
     <children>
       <AnchorPane id="AnchorPane" layoutX="-5.0" layoutY="-4.0" prefHeight="400.0" prefWidth="600.0">
          <children>
@@ -62,26 +62,22 @@
                <children>
                   <ImageView fitHeight="400.0" fitWidth="300.0" layoutX="25.0" layoutY="143.0" opacity="0.21" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../images/balloons.png" />
+                        <Image url="@../../../images/balloons.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="116.0" fitWidth="166.0" layoutX="27.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../images/logo.png" />
-                     </image>
-                  </ImageView>
+                  <ImageView fx:id="bttimage" fitHeight="116.0" fitWidth="166.0" layoutX="175.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true" />
                   <Button fx:id="btnsignup" layoutX="80.0" layoutY="447.0" mnemonicParsing="false" onAction="#Register" style="-fx-background-color: #0288D1; -fx-text-fill: #ffffff; -fx-background-radius: 0px;" text="S'inscrire" />
                   <Label layoutX="46.0" layoutY="79.0" text="Inscription" textFill="#f1a9a0">
                      <font>
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="Nom" layoutX="42.0" layoutY="142.0" maxHeight="300.0" maxWidth="300.0" promptText="Nom" style="-fx-background-color: transparent; -fx-border-width: 0 0 2px 0; -fx-border-color: white; -fx-text-fill: white;">
+                  <TextField fx:id="Nom" layoutX="42.0" layoutY="142.0" maxHeight="300.0" maxWidth="300.0" promptText="Nom" style="-fx-background-color: transparent; -fx-border-width: 0 0 2px 0; -fx-border-color: white; -fx-text-fill: black;">
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
                   </TextField>
-                  <TextField fx:id="Email" layoutX="42.0" layoutY="188.0" maxHeight="300.0" maxWidth="300.0" promptText="Adresse e-mail" style="-fx-background-color: transparent; -fx-border-width: 0 0 2px 0; -fx-border-color: white; -fx-text-fill: white;">
+                  <TextField fx:id="Email" layoutX="42.0" layoutY="188.0" maxHeight="300.0" maxWidth="300.0" promptText="Adresse e-mail" style="-fx-background-color: transparent; -fx-border-width: 0 0 2px 0; -fx-border-color: white; -fx-text-fill: black;">
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
