--- a/src/edu/AllForKids/gui/GestionStore.fxml
+++ b/src/edu/AllForKids/gui/GestionStore.fxml
@@ -23,22 +23,25 @@
             <Image url="@../../../images/balloons.png" />
          </image>
       </ImageView>
-      <VBox layoutX="7.0" layoutY="19.0" prefHeight="671.0" prefWidth="204.0" spacing="12.0">
+      <VBox layoutX="7.0" layoutY="9.0" prefHeight="681.0" prefWidth="204.0" spacing="12.0">
          <children>
-            <ImageView fx:id="AfficheIMG" fitHeight="92.0" fitWidth="204.0" pickOnBounds="true" preserveRatio="true" smooth="false" />
-            <TextField id="Titre" fx:id="txtproduit" promptText="Nom Produit" style="-fx-border-color: #2471A3;" />
+            <ImageView fx:id="AfficheIMG" fitHeight="62.0" fitWidth="204.0" pickOnBounds="true" preserveRatio="true" smooth="false" />
+            <TextField id="Titre" fx:id="txtproduit" prefHeight="20.0" prefWidth="178.0" promptText="Nom Produit" style="-fx-border-color: #2471A3;" />
             <HBox prefHeight="29.0" prefWidth="187.0" spacing="5.0">
                <children>
-                  <Button fx:id="imagebtt" mnemonicParsing="false" onAction="#ImageChoose" prefHeight="27.0" style="-fx-background-color: #22A7F0;" text="Upload" textFill="WHITE" />
-                  <ImageView fx:id="imageprod" fitHeight="76.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" />
+                  <Button fx:id="imagebtt" mnemonicParsing="false" onAction="#ImageChoose" prefHeight="23.0" prefWidth="72.0" style="-fx-background-color: #22A7F0;" text="Upload" textFill="WHITE" />
+                  <ImageView fx:id="imageprod" fitHeight="71.0" fitWidth="106.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </HBox>
-            <TextField id="Lieu" fx:id="txtprix" onAction="#LieuChanged2" promptText="Prix" style="-fx-border-color: #2471A3;" />
-            <TextField id="Frais" fx:id="txtquantite" promptText="Stock" style="-fx-border-color: #2471A3;" />
-            <ComboBox fx:id="txtcategorie" prefWidth="150.0" />
-            <CheckBox fx:id="txtdisponible" mnemonicParsing="false" text="Disponibilité" />
-            <Pane prefHeight="0.0" prefWidth="200.0" />
-            <HBox prefHeight="38.0" prefWidth="200.0" spacing="5.0">
+            <Pane prefHeight="235.0" prefWidth="204.0">
+               <children>
+                  <CheckBox fx:id="txtdisponible" layoutX="20.0" layoutY="196.0" mnemonicParsing="false" text="Disponibilité" />
+                  <ComboBox fx:id="txtcategorie" layoutX="4.0" layoutY="155.0" prefHeight="25.0" prefWidth="185.0" />
+                  <TextField id="Frais" fx:id="txtquantite" layoutX="3.0" layoutY="110.0" prefHeight="28.0" prefWidth="185.0" promptText="Stock" style="-fx-border-color: #2471A3;" />
+                  <TextField id="Lieu" fx:id="txtprix" layoutX="4.0" layoutY="60.0" onAction="#LieuChanged2" prefHeight="28.0" prefWidth="185.0" promptText="Prix" style="-fx-border-color: #2471A3;" />
+                  <TextField fx:id="fileImage" layoutX="3.0" layoutY="22.0" prefHeight="26.0" prefWidth="185.0" promptText="image" />
+               </children></Pane>
+            <HBox prefHeight="38.0" prefWidth="204.0" spacing="5.0">
                <children>
                   <Button id="Ajout" fx:id="bttajout" mnemonicParsing="false" onAction="#AjoutProduit" prefHeight="28.0" style="-fx-background-color: #22A7F0;" text="Ajouter" textFill="WHITE" />
                   <Button id="Modif" fx:id="modifierprod" mnemonicParsing="false" onAction="#ModifierProduit" prefHeight="28.0" style="-fx-background-color: #22A7F0;" text="Modifier" textFill="WHITE" />
