--- a/src/edu/AllForKids/gui/Panier.fxml
+++ b/src/edu/AllForKids/gui/Panier.fxml
@@ -17,7 +17,7 @@
       </TableView>
       <Button fx:id="commander" layoutX="259.0" layoutY="246.0" mnemonicParsing="false" onAction="#commander" prefHeight="25.0" prefWidth="107.0" style="-fx-background-color: #22A7F0;" text="Commander" textFill="#f5f4f4" />
       <Label layoutX="21.0" layoutY="271.0" prefHeight="37.0" prefWidth="154.0" text="Prix Total Des Achats" />
-      <Label fx:id="totalPrix" layoutX="150.0" layoutY="271.0" prefHeight="37.0" prefWidth="140.0" text="Label" />
+      <Label fx:id="totalPrix" layoutX="150.0" layoutY="271.0" prefHeight="37.0" prefWidth="140.0" />
       <Button fx:id="btn" layoutX="376.0" layoutY="21.0" mnemonicParsing="false" onAction="#suprrimerDuPanier" prefHeight="25.0" prefWidth="140.0" style="-fx-background-color: #22A7F0;" text="Supprimer Du Panier" textFill="#eeeaea" />
    </children>
 </AnchorPane>
