--- a/src/edu/AllForKids/gui/Quantite.fxml
+++ b/src/edu/AllForKids/gui/Quantite.fxml
@@ -11,6 +11,6 @@
       <Label layoutX="14.0" layoutY="32.0" text="Nombre Artcile" />
       <TextField fx:id="nbrArticle" layoutX="111.0" layoutY="28.0" prefHeight="25.0" prefWidth="52.0" />
       <Button fx:id="AjouterArtcile" layoutX="68.0" layoutY="75.0" mnemonicParsing="false" onAction="#AjoutArticle" style="-fx-background-color: #22A7F0;" text="Enregistrer" textFill="#f8f7f7" />
-      <Label fx:id="id" layoutX="159.0" layoutY="70.0" text="Label" visible="false" />
+      <TextField fx:id="id" disable="true" layoutX="156.0" layoutY="65.0" prefHeight="17.0" prefWidth="38.0" visible="false" />
    </children>
 </AnchorPane>
