--- a/src/edu/AllForKids/gui/afficheProd.fxml
+++ b/src/edu/AllForKids/gui/afficheProd.fxml
@@ -2,52 +2,31 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.AllForKids.gui.AfficheProdController">
+<AnchorPane id="AnchorPane" prefHeight="491.0" prefWidth="739.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.AllForKids.gui.AfficheProdController">
       <children>
-      <VBox layoutX="596.0" layoutY="21.0" prefHeight="461.0" prefWidth="212.0" spacing="15.0">
-         <children>
-            <HBox prefHeight="46.0" prefWidth="204.0" spacing="6.0">
-               <children>
-                  <TextField fx:id="Titre" prefHeight="25.0" prefWidth="143.0" promptText="chercher" style="-fx-border-color: #2471A3;" />
-                  <Button fx:id="ChercherTitre" mnemonicParsing="false" onAction="#Chercher" style="-fx-background-color: #22A7F0;" text="chercher" textFill="WHITE" />
-               </children>
-            </HBox>
-            <Pane prefHeight="195.0" prefWidth="212.0">
-               <children>
-                  <CheckBox id="Randonnée" fx:id="Cultiver" layoutX="17.0" layoutY="63.0" mnemonicParsing="false" text="Vetements" />
-                  <Label layoutX="17.0" layoutY="22.0" text="Filtrer Par Type" />
-                  <CheckBox id="Voyage" fx:id="Distraire" layoutX="15.0" layoutY="107.0" mnemonicParsing="false" text="Jouets" />
-                  <Button layoutX="126.0" layoutY="158.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="61.0" style="-fx-background-color: #22A7F0;" text="filtrer" textFill="WHITE" />
-               </children>
-            </Pane>
-            <HBox alignment="CENTER_RIGHT" prefHeight="26.0" prefWidth="184.0" />
-         </children>
-      </VBox>
-      <ScrollPane fx:id="LisTProd" fitToHeight="true" fitToWidth="true" layoutX="12.0" layoutY="71.0" pannable="true" prefHeight="420.0" prefWidth="584.0">
+      <ScrollPane fx:id="LisTProd" fitToHeight="true" fitToWidth="true" layoutX="12.0" layoutY="77.0" pannable="true" prefHeight="414.0" prefWidth="515.0">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </ScrollPane>
-      <ImageView fx:id="cadd" fitHeight="57.0" fitWidth="93.0" layoutX="524.0" layoutY="19.0" onMouseClicked="#consulterPanier" pickOnBounds="true" preserveRatio="true">
+      <Circle fx:id="nbPanier" fill="#cdcdcd" layoutX="470.0" layoutY="24.0" radius="11.0" stroke="#f8f7f7" strokeType="INSIDE" />
+      <Label fx:id="nbpanier" layoutX="463.0" layoutY="13.0" prefHeight="22.0" prefWidth="37.0" text="0" />
+      <Button fx:id="bttVoir" alignment="BOTTOM_RIGHT" layoutX="14.0" layoutY="38.0" mnemonicParsing="false" onAction="#voirPanier" style="-fx-background-color: #22A7F0;" text="Voir Panier" textFill="WHITE" />
+      <ImageView fx:id="cadd" fitHeight="57.0" fitWidth="93.0" layoutX="470.0" layoutY="19.0" onMouseClicked="#consulterPanier" pickOnBounds="true" preserveRatio="true">
     <image>
       <Image url="file:/C:/Users/Narjes/Pictures/panier.jpg" />
     </image>
   </ImageView>
-      <Circle fx:id="nbPanier" fill="#cdcdcd" layoutX="524.0" layoutY="38.0" radius="11.0" stroke="#f8f7f7" strokeType="INSIDE" />
-      <Label fx:id="nbpanier" layoutX="521.0" layoutY="30.0" prefHeight="14.0" prefWidth="22.0" text="0" />
-      <Button fx:id="bttVoir" alignment="BOTTOM_RIGHT" layoutX="24.0" layoutY="35.0" mnemonicParsing="false" onAction="#voirPanier" style="-fx-background-color: #22A7F0;" text="Voir Panier" textFill="WHITE" />
+      <TextField fx:id="cat" layoutX="535.0" layoutY="77.0" prefHeight="22.0" prefWidth="115.0" />
+      <Button layoutX="660.0" layoutY="77.0" mnemonicParsing="false" onAction="#Search" style="-fx-background-color: #22A7F0;" text="Button" />
    </children>
    
 </AnchorPane>
