--- a/src/edu/AllForKids/gui/AccueilFrontEnd.fxml
+++ b/src/edu/AllForKids/gui/AccueilFrontEnd.fxml
@@ -25,7 +25,7 @@
                      <children>
                         <ImageView fitHeight="49.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../images/logo.png" />
+                              <Image url="@../images/logo.png" />
                            </image>
                         </ImageView>
                         <Separator prefWidth="200.0" />
